<resources>

    <string name="app_name">知更鸟</string>
    <string name="about_card_title">Daily Paper</string>
    <string name="about_card_message">这是一个学习安卓Material Design设计的新闻客户端</string>
    <string name="action_settings">关于</string>

    <string name="navigation_news">新闻</string>
    <string name="navigation_about">关于</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="name">Manlier</string>

    <string name="load_fail">加载数据失败!</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>

    <string name="dialog_ok">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_title">请输入评论</string>

    <string name="invalid_comment">你输入的评语不能超过指定字符数目</string>

    <string name="about_card2_title">开发人员</string>
    <string name="leader">邓嘉新</string>
    <string name="member01">王福超</string>
    <string name="member02">马亮</string>
    <string name="member03">郭鸿恩</string>
    <string name="member04">黄世贤</string>
</resources>
