<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_about_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/main_card_margin_vertical"
    android:layout_marginLeft="@dimen/main_card_margin_horizontal"
    android:layout_marginRight="@dimen/main_card_margin_horizontal"
    android:layout_marginTop="@dimen/main_card_margin_vertical"
    android:background="@color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_card_about_2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:text="@string/about_card2_title"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_card_about_2_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_card_about_2_1"
            android:background="@color/main_background" />

        <LinearLayout
            android:id="@+id/about_leader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_card_about_2_line"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@mipmap/leader" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/leader"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_member01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_leader"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@mipmap/member" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/member01"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_member02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_member01"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@mipmap/member" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/member02"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_member03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_member02"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@mipmap/member" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/member03"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_member04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_member03"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:src="@mipmap/member" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/member04"
                android:textStyle="italic" />
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>